# esp_agent_status_light

./: .gitignore  AGENT.md  Cargo.toml  README.md
docs/: ARCHITECTURE.md  QUICK_START_CARD.md  TECHNICAL_DESIGN.md  USER_MANUAL.md
esp32c3_arduino/: esp32c3_arduino.ino
src/: cli.rs  command.rs  daemon.rs  main.rs  model.rs  router.rs  runtime_lock.rs
src/adapters/: mod.rs
src/adapters/device/: btleplug_ble.rs  mock.rs  mod.rs
src/adapters/install/: claude.rs  codex.rs  cursor.rs  mod.rs
src/adapters/ipc/: mod.rs  named_pipe.rs  tcp_loopback.rs  unix_socket.rs
src/adapters/log/: jsonl.rs  mod.rs
src/adapters/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/adapters/runtime/: fs.rs  mod.rs
src/adapters/source/: claude.rs  codex.rs  cursor.rs  fallback.rs  mod.rs
src/command/: boot.rs  install.rs  io.rs
src/ports/: device.rs  hook_install.rs  ipc.rs  log.rs  mod.rs  platform.rs  runtime.rs  source.rs
tests/adapters/install/: claude_tests.rs  codex_tests.rs  cursor_tests.rs  mod_tests.rs
tests/adapters/ipc/: named_pipe_tests.rs
tests/adapters/log/: jsonl_tests.rs
tests/adapters/source/: claude_tests.rs  codex_tests.rs  cursor_tests.rs
tests/core/: cli_tests.rs  command_tests.rs  daemon_tests.rs  router_tests.rs
