[package]
name = "esp"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
btleplug = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
